kubernetes/photoprism/base/postgres/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photoprism-app
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: photoprism
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: photoprism
          podSelector:
            matchLabels:
              app: photoprism
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photoprism-postgres
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: photoprism
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: photoprism
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: photoprism
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: photoprism
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: photoprism
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      db: photoprism-pg
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: photoprism
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: photoprism
      ports:
        - port: 5432
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-server
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: photoprism
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: openshift-kube-apiserver
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photoprism-allow-truenas-egress
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: photoprism
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.3/32
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgdump-photoprism-ingress
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: photoprism
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-ingress
  namespace: photoprism
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: photoprism
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/pgadmin: pgadmin
      ports:
        - protocol: TCP
          port: 5432
